--- a/Movie_Recommender System-Copy1.ipynb
+++ b/Movie_Recommender System-Copy1.ipynb
@@ -206,7 +206,7 @@
     }
    ],
    "source": [
-    "t_s = str(input(\"Which is you're recently watched movie\"))\n",
+    "t_s = str(input(\"Which is you're recently watched movie : \"))\n",
     "mv = pd.read_csv(\"movies.csv\")\n",
     "rt = pd.read_csv(\"ratings.csv\")\n",
     "df = mv.merge(rt, on=\"movieId\")\n",
